--- a/templates/partials/modals.html
+++ b/templates/partials/modals.html
@@ -53,7 +53,7 @@
                     <div class="recording-state__heading-text">
                         <h3 class="recording-state__title">Recorded gameplay</h3>
                         <div class="recording-state__mode-row">
-                            <span class="recording-state__match-count">
+                            <span id="recording-match-count-container" class="recording-state__match-count">
                                 <img
                                     src="assets/images/cell.svg"
                                     class="recording-state__match-icon"
