update recording state (use own css file)

--- a/templates/partials/head.html
+++ b/templates/partials/head.html
@@ -32,5 +32,6 @@
     <link rel="stylesheet" href="css/shop.css" />
     <link rel="stylesheet" href="css/account.css" />
     <link rel="stylesheet" href="css/tutorial.css" />
+    <link rel="stylesheet" href="css/recording-state.css" />
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script type="module" src="dist/main.js"></script>
