update recording state (use own html file)

--- a/templates/index.html.jinja
+++ b/templates/index.html.jinja
@@ -22,6 +22,8 @@
 
 {% include 'partials/modals.html' %}
 
+{% include 'partials/recording-state.html' %}
+
 {% include 'partials/option-menu.html' %}
 
 </body>
