update board: move it to the center

--- a/css/board.css
+++ b/css/board.css
@@ -10,6 +10,11 @@
     touch-action: none;
 }
 
+.match-app--playing .board {
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
 .board__particles {
     position: absolute;
     inset: 0;
