--- a/templates/partials/hud-and-game.html
+++ b/templates/partials/hud-and-game.html
@@ -22,15 +22,12 @@
                 <span id="moves-label" class="hud__top-stat-label" data-i18n-key="hud.label.moves">Moves</span>
             </div>
 
-            <div class="hud__top-stat hud__top-stat--multiplier">
-                <span id="hud-multiplier" class="hud__top-stat-value">x1.00</span>
-                <span class="hud__top-stat-label" data-i18n-key="hud.label.multiplier">Mult.</span>
-            </div>
         </div>
 
         <div class="hud__progress">
             <div id="score-progress" class="hud__progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="300" aria-valuenow="0">
                 <div id="score-progress-fill" class="hud__progress-fill"></div>
+                <span id="hud-multiplier" class="hud__progress-multiplier">x1.00</span>
                 <span class="hud__progress-value">
                     <span id="score" class="hud__value-strong">0/300</span>
                 </span>
