--- a/css/tutorial.css
+++ b/css/tutorial.css
@@ -62,8 +62,8 @@
 
 .tutorial__item {
     display: flex;
-    flex-direction: column;
-    gap: 0.2rem;
+    align-items: flex-start;
+    gap: 0.85rem;
     padding-bottom: 0.7rem;
     border-bottom: 1px solid rgba(255, 255, 255, 0.06);
 }
@@ -84,6 +84,85 @@
 .tutorial__item-text {
     font-size: 0.93rem;
     color: rgba(255, 255, 255, 0.68);
+}
+
+.tutorial__item-body {
+    display: flex;
+    flex-direction: column;
+    gap: 0.2rem;
+}
+
+.tutorial__item-icon {
+    width: 2.3rem;
+    height: 2.3rem;
+    border-radius: 0.75rem;
+    border: 1px solid rgba(255, 255, 255, 0.12);
+    background: rgba(255, 255, 255, 0.06);
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    flex-shrink: 0;
+}
+
+.tutorial__item-icon-svg {
+    width: 1.35rem;
+    height: 1.35rem;
+}
+
+.tutorial__item-icon--shuffle {
+    color: #f0c86e;
+}
+
+.tutorial__item-icon--switch {
+    color: #7fd4ff;
+}
+
+.tutorial__item-icon--bomb {
+    color: #ff8a7a;
+}
+
+.tutorial__item-icon--match3 {
+    color: #9edb83;
+}
+
+.tutorial__item-icon--match4 {
+    color: #ffd56a;
+}
+
+.tutorial__item-icon--match5 {
+    color: #f2a9ff;
+}
+
+.tutorial__item-icon--match-lt {
+    color: #7dd2ff;
+}
+
+.tutorial__item-icon--match-square {
+    color: #ffd68f;
+}
+
+.tutorial__item-icon--hard {
+    color: #d7c4ff;
+}
+
+.tutorial__item-icon--chest {
+    color: #f8c17b;
+}
+
+.tutorial__item-icon--generator {
+    color: #86d0ff;
+}
+
+.tutorial__item-icon--level {
+    color: #ffd36f;
+}
+
+.tutorial__item-icon--blocker {
+    color: #ff9f77;
+}
+
+.tutorial__item-icon--time {
+    color: #7fe1c7;
 }
 
 .match-app--tutorial .main-menu,
