--- a/templates/partials/tutorial.html
+++ b/templates/partials/tutorial.html
@@ -159,6 +159,7 @@
                                             <rect x="6" y="10" width="4" height="4" rx="0.9" />
                                             <rect x="6" y="14" width="4" height="4" rx="0.9" />
                                             <rect x="10" y="14" width="4" height="4" rx="0.9" />
+                                            <rect x="14" y="14" width="4" height="4" rx="0.9" />
                                         </svg>
                                     </span>
                                     <div class="tutorial__item-body">
@@ -245,7 +246,9 @@
                                 <li class="tutorial__item">
                                     <span class="tutorial__item-icon tutorial__item-icon--generator" aria-hidden="true">
                                         <svg class="tutorial__item-icon-svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                            <path d="M9 7h4a3 3 0 0 1 0 6H8a3 3 0 1 0 0 6h4" />
+                                            <path d="M9 14l-2 2a3 3 0 0 0 4.2 4.2l2-2" />
+                                            <path d="M15 10l2-2a3 3 0 0 0-4.2-4.2l-2 2" />
+                                            <path d="M10 14l4-4" />
                                         </svg>
                                     </span>
                                     <div class="tutorial__item-body">
