--- a/css/tutorial.css
+++ b/css/tutorial.css
@@ -111,6 +111,28 @@
     height: 1.35rem;
 }
 
+.tutorial__item-icon--combo {
+    width: 3.6rem;
+    padding: 0 0.35rem;
+    gap: 0.3rem;
+}
+
+.tutorial__bomb-icon {
+    width: 1.1rem;
+    height: 1.1rem;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.05rem;
+    line-height: 1;
+}
+
+.tutorial__bomb-plus {
+    font-size: 0.9rem;
+    color: rgba(255, 255, 255, 0.7);
+    line-height: 1;
+}
+
 .tutorial__item-icon-core {
     width: 1.55rem;
     height: 1.55rem;
