reduced sugar chest to 3 states

--- a/css/tutorial.css
+++ b/css/tutorial.css
@@ -215,7 +215,7 @@
 .tutorial__item-icon--chest .tutorial__item-icon-core {
     width: 1.7rem;
     height: 1.7rem;
-    background-image: url('../assets/images/sugar-chest-01.png');
+    background-image: url('../assets/images/sugar-chest-01.webp');
 }
 
 .tutorial__item-icon--level {
