--- a/css/board.css
+++ b/css/board.css
@@ -679,8 +679,9 @@
 }
 
 .board__shockwave--combo {
-    width: 80px;
-    height: 80px;
+    --combo-scale: 1;
+    width: 40px;
+    height: 40px;
     border: 6px solid rgba(255, 255, 255, 0.95);
     box-shadow:
         0 0 30px rgba(255, 255, 255, 0.8),
@@ -690,8 +691,9 @@
 }
 
 .board__shockwave--combo-inner {
-    width: 60px;
-    height: 60px;
+    --combo-scale: 1;
+    width: 30px;
+    height: 30px;
     border: 4px solid rgba(168, 85, 247, 0.9);
     box-shadow:
         0 0 20px rgba(168, 85, 247, 0.7),
@@ -709,7 +711,7 @@
         opacity: 0.6;
     }
     100% {
-        transform: translate(-50%, -50%) scale(6);
+        transform: translate(-50%, -50%) scale(calc(5 * var(--combo-scale, 1)));
         opacity: 0;
     }
 }
@@ -720,7 +722,7 @@
         opacity: 1;
     }
     100% {
-        transform: translate(-50%, -50%) scale(5);
+        transform: translate(-50%, -50%) scale(calc(4 * var(--combo-scale, 1)));
         opacity: 0;
     }
 }
